# Pixelz

./: .gitignore  AUDIT_CHECKLIST.md  AUGMENTED_IMPLEMENTATION.md  AUGMENTED_POLICY.md  AUGMENTED_REPUTATION.md  CI.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LAW_ENF_ASSIST_GUIDE.md  LICENSE  OPENING_EVENT.md  README.aln.md  README.md  RUNBOOK_kujira_to_aln20.md  SECURITY_TPS.md  SETUP.md  TPS_TARGETS.md  TREASURY.md  jest.config.json  package.json
.github/: copilot-instructions.md
.github/workflows/: aln-ci.yml
aln/augmented_city/: node_types.aln
aln/augmented_policy/: policy_engine.aln  policy_engine.js
aln/bci_neuromorphic/: compliance_routes.yaml  types.aln
aln/compliance_routing/: policy_JFMIP_24_01.yaml  router.aln
aln/core/: index.js  package.json
aln/dao/: package.json
aln/docs/: developer_onboarding.aln
aln/energy/: energy_integration.js  grid_allocation.aln  personal_state.aln
aln/explorer/: app.js  index.html  package.json  server.js  style.css
aln/migration/: analyzer.aln  ingest.js  package.json
aln/nanoswarm/: interfaces.aln  policies.yaml
aln/neuromorphic/: adapter_bridge.js  adapter_sandbox.aln
aln/reputation/: records.aln  reputation_system.js
aln/security/: key_custodian.js  malware.aln  ml_hooks.js  threat_feed.js  threat_feed_sample.json
aln/stability/: reserve_policy.aln  reserve_stability.js
aln/superintelligence/: constraints.aln
aln/tests/: package.json
aln/token_creation/: pipeline.aln  pipeline.js
aln/tools/: aln_linter.js  package.json
aln/ue_integration/: README_UE.md  ue_rpc_adapter.js
aln/wallet/: package.json  tx_builder.js
config/: known_bases.json  scaling.yaml
contracts/aln20_auet/: README.md
contracts/aln20_csp/: Cargo.toml  README.md
contracts/aln_registry/: Cargo.toml
contracts/aln_registry/src/: lib.rs  tests.rs
contracts/auet/: Cargo.toml
contracts/auet/src/: lib.rs  tests.rs
contracts/bridge/: Cargo.toml
contracts/bridge/benches/: merkle_benches.rs
contracts/bridge/src/: handler_claim_with_origin.rs  lib.rs  tests.rs
contracts/bridge/src/core/: bridge_architecture.rs  mod.rs  refactor_state.rs
contracts/energy_router/: Cargo.toml
contracts/registry/: tests.rs
contracts/ubs_oracle/: Cargo.toml
contracts/ubs_oracle/src/: lib.rs
crates/aln_core/: Cargo.toml
crates/aln_indexer/: Cargo.toml  README.md
crates/aln_indexer/fixtures/: fixture.sql
crates/aln_indexer/migrations/: V1__init.sql  V2__rollup_unique_index.sql  V3__tx_and_indexer_state.sql  V4__token_classes.sql
crates/aln_indexer/src/: db_postgres.rs  did_identity.rs  follow_chain.rs  ibc_denom.rs  kujira_ingest.rs  lib.rs  main.rs  metrics.rs  pagination.rs  reorg.rs  replay_reindex.rs  retention.rs  schema.rs
crates/aln_indexer/tests/: db_integration.rs  integration.rs  kujira_ingest.rs  replay_reindex.rs
crates/aln_trader_pod/: Cargo.toml
crates/aln_ubs/: Cargo.toml
crates/cem/: Cargo.toml  README.md
crates/cem/src/: cem_calibration_workflow.rs  cem_entrypoint.rs  lib.rs  main.rs  metrics.rs  tests.rs  version_stamp.rs
db/: retention_compaction.sql  schema.sql
design/: aln_bci_wallet_and_opt_in_policies.aln  aln_security_bci_foundation.aln  aln_security_foundation.aln
docs/: ALN_ENERGY_MARKET_SPEC.md  BRIDGE_THREAT_MODEL.md  ENERGY_MARKET_READINESS_CHECKLIST.md  INDEXER_OVERVIEW.md  REFRACTOR_DESIGN.md  RUNBOOK_indexer.md  aln20_mintability_orphan_ibc_snapshot_design.md  aln_bridge_invariants.md  aln_contracts_overview.md  aln_registry_overview.md  aln_tools_usage.md  ci_checklist.md  energy_market_semantics.md  orphan_asset_policy.md  policy_mapping.md
docs/cosmwasm/: cosmwasm_local_dev_playbook.md
pixelz-core/src/: PixelzSave.sol  lib.rs
reference-solidity/: ALN20Mintable.sol  ALN20NonMintable.sol  ALNBridgeHelper.sol
scripts/: build_tools.sh  build_wasm.sh  deploy_examples.sh  migrate_db.sh  run_all_tests.ps1  run_all_tests.sh  run_energy_market_smoke.sh  run_indexer_local.sh  test_all.ps1  test_all.sh
tests/: invariants.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tools/: verify_aln_scaffold.js
tools/aln_tools/: Cargo.toml
tools/did_provenance/: Cargo.toml
tools/kujira_orphan_scanner/: Cargo.toml  README.md
tools/kujira_orphan_scanner/src/: main.rs  scaling.rs  snapshot_hash.rs
tools/ubs_analyzer/: Cargo.toml
(+55 files in other folders)
