[package]
name = "aln_registry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cw_storage_plus = "0.11"

[dev-dependencies]
cosmwasm-std = { version = "0.19", features = ["test"] }
