[package]
name = "aln_auet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = "0.19"
cw2 = "0.11"
cw20 = "0.14"
cw20-base = { version = "0.14", package = "cw20-base" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
cosmwasm-std = { version = "0.19", features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
# Add cw-multi-test if needed later
