[package]
name = "aln_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
prometheus = "0.14"

[dev-dependencies]
# for tests
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3", features = ["macros", "tls"], default-features = false }
