[package]
name = "cem"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.15"
rand = "0.8"
ndarray-linalg = { version = "0.18", optional = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
prometheus = "0.14"
once_cell = "1.16"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
