[package]
name = "kujira_orphan_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
urlencoding = "2.1"
bech32 = "0.8"
rust_decimal = "1"
